--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -1,5 +1,5 @@
 .conmain{
-	margin-top: 4%;font-family: 'Marko One', Times New Roman, Verdana, sans-serif;background-color: rgb(227,251,227);
+	font-family: 'Marko One', Times New Roman, Verdana, sans-serif;background-color: rgb(227,251,227);
 }
 .conmain h1{
 	color: rgb(60,159,113);
