--- a/css/gallerystyle.css
+++ b/css/gallerystyle.css
@@ -1,5 +1,5 @@
 .galmain{
-	margin-top: 4%;font-family: 'Marko One', Times New Roman, Verdana, sans-serif;background-color: rgb(227,251,227);padding-bottom: 5%;
+	font-family: 'Marko One', Times New Roman, Verdana, sans-serif;background-color: rgb(227,251,227);padding-bottom: 5%;
 }
 .galmain h1{
 	color: rgb(60,159,113);
