--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -1,5 +1,5 @@
 .abtmain{
-	width: 100%;margin-top: 4%;background-color: rgb(227,251,227);padding-bottom: 5%;
+	width: 100%;background-color: rgb(227,251,227);padding-bottom: 5%;
 }
 .abtmain h1{
 	color: rgb(60,159,113);font-family: Segoe UI Black;
