--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ nav ul li input[type=text]{
 .sec3 {
   width:42%;float: left;margin-top: 2.5%;margin-left: 5%;
 }
-.sec3 p, .sec4 p{
+.sec3 h2, .sec4 h2{
   text-align:center;font-family:Kristen ITC;font-size:23px;
 }
 .sec3 ul, .sec4 ol{
